--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -154,7 +154,7 @@ jobs:
       # Build packages
       - name: Build packages
         env:
-          VCINSTALLDIR: "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC"
+          VCINSTALLDIR: 'C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC'
           PLATFORM: windows
         shell: bash
         run: ./.ci/ci_build.sh
