Fix AArch64 GitHub Actions PR build

--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -66,6 +66,7 @@ jobs:
         with:
           name: ${{ matrix.dockerTag }}.zip
           path: ${{ matrix.dockerTag }}
+        if: matrix.dockerTag != 'aarch64'
 
 ######################
 ###### macOS #########
