--- a/.github/workflows/push-master.yml
+++ b/.github/workflows/push-master.yml
@@ -1,8 +1,9 @@
 name: Hyperion CI Build
 on:
   push:
-    branches:
-      - master
+    branches-ignore:
+      - 'gh-pages'
+      - 'docker-ci'
 
 ######################
 ###### Linux #########
