--- a/.github/workflows/push-master.yml
+++ b/.github/workflows/push-master.yml
@@ -86,6 +86,42 @@ jobs:
           path: build/Hyperion-*
 
 ######################
+###### Windows #######
+######################
+
+  windows:
+    name: Windows
+    runs-on: windows-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v1
+        with:
+          submodules: true
+
+      - name: Install Qt
+        uses: jurplel/install-qt-action@v2
+        with:
+          version: '5.14.1'
+          target: 'desktop'
+          arch: 'win64_msvc2017_64'
+
+      - name: Install Python
+        uses: actions/setup-python@v1
+        with:
+          python-version: '3.x'
+
+      - name: Set up x64 build architecture environment
+        shell: cmd
+        run: call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvars64.bat"
+
+      # Build packages
+      - name: Build packages
+        env:
+          PLATFORM: windows
+        shell: bash
+        run: ./.ci/ci_build.sh
+
+######################
 #### Documentation ###
 ######################
 
