--- a/.azure.yml
+++ b/.azure.yml
@@ -62,3 +62,34 @@ jobs:
       PLATFORM: 'osx'
     condition: succeeded()
     displayName: 'Build macOS 10.13 packages'
+
+######################
+###### windows #######
+######################
+
+- job: windows
+  timeoutInMinutes: 120
+  pool:
+    vmImage: 'windows-latest'
+
+  steps:
+  - checkout: self # represents the repo where the initial Pipelines YAML file was found
+    submodules: recursive # set to 'recursive' to get submodules of submodules
+
+  - task: UsePythonVersion@0
+    inputs:
+      versionSpec: '3.x'
+      addToPath: true
+      architecture: 'x64'
+
+  - script: |
+      cd $(Build.SourcesDirectory)
+      python -m pip install aqtinstall
+      python -m aqt install -O c:\Qt 5.14.0 windows desktop win64_msvc2017_64
+    displayName: 'Install Qt 5.14.0'
+  # build process
+  - bash: ./.ci/ci_build.sh
+    env:
+      PLATFORM: 'windows'
+    condition: succeeded()
+    displayName: 'Build windows packages'
