Update compile howto
- to qt5.15
- minimal install overhead
- sync with vscode and cmake

--- a/.editorconfig
+++ b/.editorconfig
@@ -19,3 +19,7 @@ indent_size = 4
 [*.{ts,js,html}]
 indent_style = space
 indent_size = 2
+
+# version file
+[version]
+insert_final_newline = false
