--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -95,7 +95,7 @@ MACRO(FIRSTSUBDIR result curdir)
   FOREACH(child ${children})
     IF(IS_DIRECTORY ${curdir}/${child})
       LIST(APPEND dirlist "${curdir}/${child}")
-	  #BREAK()
+	  	BREAK()
     ENDIF()
   ENDFOREACH()
   SET(${result} ${dirlist})
@@ -283,10 +283,10 @@ if (CMAKE_CXX_COMPILER_ID MATCHES "MSVC")
 	# The Qt5_DIR should point to Qt5Config.cmake   -> C:/Qt/5.xx/msvc2017_64/lib/cmake/Qt5
 	# The CMAKE_PREFIX_PATH should point to the install directory -> C:/Qt/5.xx/msvc2017_64
 	FIRSTSUBDIR(SUBDIRQT "C:/Qt")
-	SET(CMAKE_PREFIX_PATH ${CMAKE_PREFIX_PATH} "${SUBDIRQT}/msvc2017_64")
+	SET(CMAKE_PREFIX_PATH ${CMAKE_PREFIX_PATH} "${SUBDIRQT}/msvc2019_64")
 	if (NOT DEFINED ENV{Qt5_DIR})
-		message(STATUS "Set Qt5_DIR to default install path C:/Qt")
-		SET(Qt5_DIR "${SUBDIRQT}/msvc2017_64/lib/cmake/Qt5")
+		message(STATUS "Set Qt5 module path: ${SUBDIRQT}")
+		SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${SUBDIRQT}/msvc2019_64/lib/cmake/Qt5")
 	endif()
 endif()
 
