Fix windows build (part 2)

--- a/dependencies/CMakeLists.txt
+++ b/dependencies/CMakeLists.txt
@@ -302,7 +302,12 @@ if (NOT USE_SYSTEM_MBEDTLS_LIBS)
 
 	include_directories(${MBEDTLS_INCLUDE_DIR})
 
-	set (MBEDTLS_LIB_INSTALL_DIR_WITH_LIB_PREFIX "${MBEDTLS_INSTALL_DIR}/${CMAKE_STATIC_LIBRARY_PREFIX}/${CMAKE_STATIC_LIBRARY_PREFIX}")
+	if(WIN32)
+		set (MBEDTLS_LIB_INSTALL_DIR_WITH_LIB_PREFIX "${MBEDTLS_INSTALL_DIR}/lib/Release/")
+	else()
+		set (MBEDTLS_LIB_INSTALL_DIR_WITH_LIB_PREFIX "${MBEDTLS_INSTALL_DIR}/${CMAKE_STATIC_LIBRARY_PREFIX}/${CMAKE_STATIC_LIBRARY_PREFIX}")
+	endif ()
+
 	set (MBEDTLS_SSL_LIBRARY "${MBEDTLS_LIB_INSTALL_DIR_WITH_LIB_PREFIX}mbedtls${CMAKE_STATIC_LIBRARY_SUFFIX}")
 	set (MBEDTLS_X509_LIBRARY "${MBEDTLS_LIB_INSTALL_DIR_WITH_LIB_PREFIX}mbedx509${CMAKE_STATIC_LIBRARY_SUFFIX}")
 	set (MBEDTLS_CRYPTO_LIBRARY "${MBEDTLS_LIB_INSTALL_DIR_WITH_LIB_PREFIX}mbedcrypto${CMAKE_STATIC_LIBRARY_SUFFIX}")
