--- a/dependencies/CMakeLists.txt
+++ b/dependencies/CMakeLists.txt
@@ -305,7 +305,7 @@ if (NOT USE_SYSTEM_MBEDTLS_LIBS)
 	if(WIN32)
 		set (MBEDTLS_LIB_INSTALL_DIR_WITH_LIB_PREFIX "${MBEDTLS_INSTALL_DIR}/lib/Release/")
 	else()
-		set (MBEDTLS_LIB_INSTALL_DIR_WITH_LIB_PREFIX "${MBEDTLS_INSTALL_DIR}/${CMAKE_STATIC_LIBRARY_PREFIX}/${CMAKE_STATIC_LIBRARY_PREFIX}")
+		set (MBEDTLS_LIB_INSTALL_DIR_WITH_LIB_PREFIX "${MBEDTLS_INSTALL_DIR}/lib/${CMAKE_STATIC_LIBRARY_PREFIX}")
 	endif ()
 
 	set (MBEDTLS_SSL_LIBRARY "${MBEDTLS_LIB_INSTALL_DIR_WITH_LIB_PREFIX}mbedtls${CMAKE_STATIC_LIBRARY_SUFFIX}")
