cmake win32 fix + minor bugfixes

--- a/dependencies/CMakeLists.txt
+++ b/dependencies/CMakeLists.txt
@@ -303,7 +303,7 @@ if (NOT USE_SYSTEM_MBEDTLS_LIBS)
 	include_directories(${MBEDTLS_INCLUDE_DIR})
 
 	if(WIN32)
-		set (MBEDTLS_LIB_INSTALL_DIR_WITH_LIB_PREFIX "${MBEDTLS_INSTALL_DIR}/lib/Release/")
+		set (MBEDTLS_LIB_INSTALL_DIR_WITH_LIB_PREFIX "${MBEDTLS_INSTALL_DIR}/lib/${CMAKE_CFG_INTDIR}/")
 	else()
 		set (MBEDTLS_LIB_INSTALL_DIR_WITH_LIB_PREFIX "${MBEDTLS_INSTALL_DIR}/lib/${CMAKE_STATIC_LIBRARY_PREFIX}")
 	endif ()
