cmake debug msg used mbedtls libs

--- a/dependencies/CMakeLists.txt
+++ b/dependencies/CMakeLists.txt
@@ -314,6 +314,10 @@ if (NOT USE_SYSTEM_MBEDTLS_LIBS)
 	set (MBEDTLS_LIBRARIES ${MBEDTLS_SSL_LIBRARY} ${MBEDTLS_X509_LIBRARY} ${MBEDTLS_CRYPTO_LIBRARY})
 	set (MBEDTLS_LIBRARIES ${MBEDTLS_LIBRARIES} PARENT_SCOPE)
 
+	if(${CMAKE_BUILD_TYPE} EQUAL "Debug")
+		message(STATUS "mbedtls libraries: ${MBEDTLS_LIBRARIES}")
+	endif ()
+
 	mark_as_advanced (MBEDTLS_INCLUDE_DIR MBEDTLS_LIBRARIES MBEDTLS_SSL_LIBRARY MBEDTLS_X509_LIBRARY MBEDTLS_CRYPTO_LIBRARY)
 
 endif (NOT USE_SYSTEM_MBEDTLS_LIBS)
