--- a/dependencies/CMakeLists.txt
+++ b/dependencies/CMakeLists.txt
@@ -222,7 +222,7 @@ if (NOT USE_SYSTEM_MBEDTLS_LIBS)
 	set(MBEDTLS_SOURCE_DIR "${CMAKE_BINARY_DIR}/dependencies/external/mbedtls/src")
 	set(MBEDTLS_BINARY_DIR "${CMAKE_BINARY_DIR}/dependencies/external/mbedtls/build")
 	set(MBEDTLS_INSTALL_DIR "${CMAKE_BINARY_DIR}")
-	if(${CMAKE_BUILD_TYPE} EQUAL "Debug")
+	if(${CMAKE_BUILD_TYPE} AND ${CMAKE_BUILD_TYPE} EQUAL "Debug")
 		set(MBEDTLS_LOGGING 1)
 	else ()
 		set(MBEDTLS_LOGGING 0)
@@ -314,7 +314,7 @@ if (NOT USE_SYSTEM_MBEDTLS_LIBS)
 	set (MBEDTLS_LIBRARIES ${MBEDTLS_SSL_LIBRARY} ${MBEDTLS_X509_LIBRARY} ${MBEDTLS_CRYPTO_LIBRARY})
 	set (MBEDTLS_LIBRARIES ${MBEDTLS_LIBRARIES} PARENT_SCOPE)
 
-	if(${CMAKE_BUILD_TYPE} EQUAL "Debug")
+	if(${CMAKE_BUILD_TYPE} AND ${CMAKE_BUILD_TYPE} EQUAL "Debug")
 		message(STATUS "mbedtls libraries: ${MBEDTLS_LIBRARIES}")
 	endif ()
 
