--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
+[submodule "dependencies/external/rpi_ws281x"]
+	path = dependencies/external/rpi_ws281x
+	url = https://github.com/jgarff/rpi_ws281x
+	branch = master
 [submodule "dependencies/external/flatbuffers"]
 	path = dependencies/external/flatbuffers
 	url = https://github.com/google/flatbuffers
