Revert "Merge branch 'master' into Refactor_LedDevices"
This reverts commit 978ac7542c123d2a9eca593ae0852f1812a2dd7c, reversing
changes made to aa346ed61fdb803d8c46130a431d2468205a3e44.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -106,7 +106,7 @@
       "type": "shell",
       "command": "${workspaceFolder}/build/bin/hyperiond -d",
       "windows": {
-        "command": "${workspaceFolder}/build/bin/Debug/hyperiond -d -c"
+        "command": "${workspaceFolder}/build/bin/Debug/hyperiond"
       },
       "group": "build"
     },
@@ -115,7 +115,7 @@
       "type": "shell",
       "command": "${workspaceFolder}/build/bin/hyperiond -d",
       "windows": {
-        "command": "${workspaceFolder}/build/bin/Release/hyperiond -d -c"
+        "command": "${workspaceFolder}/build/bin/Release/hyperiond"
       },
       "group": "build"
     }
