--- a/.github/workflows/push-master.yml
+++ b/.github/workflows/push-master.yml
@@ -92,6 +92,8 @@ jobs:
   windows:
     name: Windows
     runs-on: windows-latest
+    env:
+      VCINSTALLDIR: 'C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC'
     steps:
       - name: Checkout
         uses: actions/checkout@v1
@@ -110,9 +112,15 @@ jobs:
         with:
           python-version: '3.x'
 
+      - name: Install NSIS
+        run: choco install --no-progress nsis -y
+
+      - name: Install OpenSSL
+        run: choco install --no-progress openssl -y
+
       - name: Set up x64 build architecture environment
         shell: cmd
-        run: call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvars64.bat"
+        run: call "${{env.VCINSTALLDIR}}\Auxiliary\Build\vcvars64.bat"
 
       # Build packages
       - name: Build packages
@@ -120,6 +128,13 @@ jobs:
           PLATFORM: windows
         shell: bash
         run: ./.ci/ci_build.sh
+
+      # upload artifacts (only on tagged commit)
+      - name: Upload artifacts
+        if: startsWith(github.event.ref, 'refs/tags')
+        uses: actions/upload-artifact@v2
+        with:
+          path: build/Hyperion-*
 
 ######################
 #### Documentation ###
@@ -165,7 +180,7 @@ jobs:
   publish:
     name: Publish Releases
     if: startsWith(github.event.ref, 'refs/tags')
-    needs: [Linux, macOS, Docs]
+    needs: [Linux, macOS, windows, Docs]
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -200,6 +215,7 @@ jobs:
           prerelease: ${{ env.preRelease }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
       # Dispatch event to build new HyperBian image
       - name: Dispatch HyperBian build
         uses: peter-evans/repository-dispatch@v1
