Add CEC functionality

--- a/HyperionConfig.h.in
+++ b/HyperionConfig.h.in
@@ -33,6 +33,9 @@
 // Define to enable avahi
 #cmakedefine ENABLE_AVAHI
 
+// Define to enable cec
+#cmakedefine ENABLE_CEC
+
 // Define to enable the usb / hid devices
 #cmakedefine ENABLE_USB_HID
 
